--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container d-flex align-items-center h-100">
       <div class="row">
         <header class="text-center col-12">
-          <h1 class="text-uppercase animate__animated animate__jackInTheBox"><strong>Join the Movement!</strong></h1>
+          <h1 class="text-uppercase animate__animated animate__jackInTheBox"><strong>the only startup you'll ever need</strong></h1>
         </header>
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
@@ -31,6 +31,9 @@
           <a href="http://eepurl.com/hwomNf"><button class="btn btn-primary btn-xl">Learn More</button></a>
         </section>
       </div>
+      <div class="footer">
+      <p>&copy;Anthony Berrios&copy;</p>
+    </div>  
     </div>
   </body>
 </html>
